@@ -1,5 +1,8 @@
 ﻿===== Smarty 3.1-DEV  =====
-12/10/2011
+15/06/2011
+- bugfix template variables where not accessable within inline subtemplates
+
+12/06/2011
 - bugfix removed unneeded merging of template variable when fetching includled subtemplates
 
 10/06/2011
